# Realworld-Examples

./: README.md  package-lock.json  package.json  turbo.json
backends/shuttle_disel/: Cargo.toml  Shuttle.toml  diesel.toml  history.txt
backends/shuttle_disel/migrations/2023-06-13-024307_create_user/: up.sql
backends/shuttle_disel/migrations/2023-06-16-161655_create_followers/: down.sql  up.sql
backends/shuttle_disel/migrations/2023-06-17-031735_create_articles/: down.sql  up.sql
backends/shuttle_disel/migrations/2023-06-17-234508_create_comments/: up.sql
backends/shuttle_disel/path/to/mydatabase/: 000017.sst  IDENTITY  LOG  LOG.old.1687012509151939  LOG.old.1687013945974723  MANIFEST-000014
backends/shuttle_disel/src/: disel_service.rs  error.rs  main.rs  routes.rs  schema.rs
backends/shuttle_disel/src/api/: articles.rs  comments.rs  mod.rs  profile.rs  tags.rs  user.rs
backends/shuttle_disel/src/db/: articles.rs  auth.rs  comments.rs  mod.rs  profile.rs  tags.rs  user.rs
backends/shuttle_disel/src/models/: articles.rs  comment.rs  follower.rs  mod.rs  tags.rs  user.rs
backends/shuttle_disel/src/routes/: articles.rs  comments.rs  mod.rs  profile.rs  tags.rs  user.rs
backends/shuttle_disel/src/utils/: auth.rs  hasher.rs  jwt.rs  mod.rs
backends/shuttle_sqlx/: Cargo.toml  Secrets.toml  Shuttle.toml  package.json  sqlx-data.json
backends/shuttle_sqlx/src/: api.rs  auth.rs  db.rs  error.rs  main.rs  routes.rs  utils.rs
backends/shuttle_sqlx/src/api/: articles.rs  auth.rs  comments.rs  tags.rs  user.rs
backends/shuttle_sqlx/src/db/: article.rs  auth.rs  comment.rs  tag.rs  user.rs
backends/shuttle_sqlx/src/sql/: down.sql  schema.sql  user_profile.sql
backends/shuttle_sqlx/src/sql/articles/: create_article.sql  feed_articles.sql  get_article.sql  list_articles.sql  update_article.sql
backends/shuttle_sqlx/src/utils/: auth.rs  hasher.rs  jwt.rs
