[package]
edition = "2021"
name    = "shuttle_disel"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum            = "0.6.18"
shuttle-axum    = "0.18.0"
shuttle-runtime = "0.18.0"
tokio           = "1.28.2"

async-trait = "0.1"
diesel-async = { version = "0.3", features = ["postgres", "deadpool"] }
diesel_migrations_async = { git = "https://github.com/aumetra/diesel_migrations_async.git", rev = "296db45f2b2120a496f7231537685fe5974c0829", features = [
    "postgres",
] }

diesel          = { version = "2", features = ["postgres"] }
serde           = { version = "1.0", features = ["derive"] }
shuttle-service = { version = "0.18", default-features = false }
