[package]
edition = "2021"
name    = "shuttle_disel"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono     = "0.4.6"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["serde", "v4"] }

dotenvy   = "0.15"
thiserror = "1.0"

async-trait = "0.1"
diesel      = { version = "2", features = ["chrono", "postgres", "r2d2", "serde_json", "uuid"] }
futures     = "0.3"
tower       = { version = "0.4", default-features = true, features = ["buffer", "timeout"] }
tower-http  = { version = "0.4", features = ["fs", "compression-full"] }
validator   = { version = "0.16", features = ["derive", "unic"] }

actix     = "0.13"
actix-web = "4.3.1"

dotenv            = "0.15"
jsonwebtoken      = "8"
lazy_static       = "1.4"
libreauth         = "0.16"
num_cpus          = "1"
shuttle-actix-web = "0.18"
shuttle-runtime   = "0.18"
shuttle-service   = { version = "0.18", default-features = false }
shuttle-shared-db = { version = "0.18", features = ["postgres"] }
slug              = "0.1.4"
sqlx              = { version = "0.6", default-features = false }
tokio             = { version = "1", features = ["macros", "rt-multi-thread"] }
