[package]
edition = "2021"
name    = "static-next-server"
publish = false
version = "0.1.0"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
shuttle-aws-rds       = { version = "0.17", features = ["postgres"] }
shuttle-axum          = { version = "0.17" }
shuttle-runtime       = { version = "0.17" }
shuttle-secrets       = "0.17"
shuttle-static-folder = "0.17"

axum       = { version = "0.6", features = ["headers"] }
axum-extra = { version = "0.7", features = [] }

sqlx       = { version = "0.6", features = ["postgres", "migrate", "chrono", "offline"] }
thiserror  = "1.0.37"
tower      = { version = "0.4", default-features = true, features = ["buffer", "timeout"] }
tower-http = { version = "0.4", features = ["fs", "compression-full"] }

dotenvy = "0.15"

log   = "0.4"
tokio = { version = "1", features = ["macros"] }

anyhow        = "1.0"
argon2        = "0.5"
chrono        = "0.4"
jsonwebtoken  = { version = "8", default-features = false, features = ["use_pem"] }
password-hash = "0.5"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
validator     = { version = "0.16", features = ["derive", "unic"] }

futures = "0.3"
rand    = "0.8"
slug    = "0.1"
